<resources>
    <string name="app_name">Runner</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="task_square">任务广场</string>
    <string name="mydelivery">我的配送</string>
    <string name="mytask">我的任务</string>
    <string name="user_center">个人中心</string>
    <string name="test">测试</string>
    <string name="login_user_name">用户名(手机号):</string>
    <string name="login_passwd">密码:</string>
    <string name="record_passwd">记住密码</string>
    <string name="fast_register">快速注册</string>
    <string name="login_button">登陆</string>
    <string name="publish_cancel">取消发布</string>
    <string name="publish_confirm">确认发布</string>
    <string name="item_category">物品类别:</string>
    <string name="location_pick">取货点:</string>
    <string name="locaiton_delivery">送货点:</string>
    <string name="time_pick">取货时间:</string>
    <string name="time_delivery">送货时间:</string>
    <string name="publish_emergency">紧急程度:</string>
    <string name="publish_pay">赏金:</string>
    <string name="publish_consignee">收货方:</string>
    <string name="publish_category_pick">类别选择</string>
    <string name="time_picker">时间选择</string>
    <string name="pay_picker">金额选择</string>
    <string name="account_picker">账户选择</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="widget_choose_time">请选择时间</string>
    <string name="all_delivey">全部配送</string>
    <string name="deliverying">正在配送</string>
    <string name="deliveryed">已送达</string>
    <string name="all_task">全部任务</string>
    <string name="not_delivered">待收货</string>
    <string name="task_finished">已完成</string>
    <string name="task_unavailable">已失效</string>
    <string name="register_passwd_reconfirm">确认密码:</string>
    <string name="register_nickname">昵称</string>
    <string name="register_address">联系地址:</string>
    <string name="register_cancel">取消注册</string>
    <string name="register_confirm">确认注册</string>
    <string name="register_set_image">选择图片</string>
    <string name="scan_qrcode">扫描二维码</string>
    <string name="task_publish">任务发布</string>
    <string name="pick_location">选择位置</string>
    <string name="add_address">新增地址</string>
    <string name="delivery_address">收货地址</string>
    <string name="contacts">联系人</string>
    <string name="add_contacts">添加联系人</string>
    <string name="task_accept">任务接受</string>
    <string name="my_delivery">我的配送</string>
    <string name="my_task">我的任务</string>
    <string name="task_comment">任务评价</string>
    <string name="input_address">请输入地址</string>
    <string name="task_wait_comment">待评价</string>
    <string name="auto_login">自动登录</string>
</resources>
