<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/register_icon"
        android:layout_width="@dimen/login_icon_width"
        android:layout_height="@dimen/login_icon_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/register_user_name"
        style="@style/login_text"
        android:hint="@string/login_user_name"
        app:met_baseColor="@color/md_black_1000" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/register_nickname"
        style="@style/login_text"
        android:hint="@string/register_nickname"
        app:met_baseColor="@color/md_black_1000" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/register_passwd"
        style="@style/login_text"
        android:hint="@string/login_passwd"
        app:met_baseColor="@color/md_black_1000" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/register_passwd_reconfirm"
        style="@style/login_text"
        android:hint="@string/register_passwd_reconfirm"
        app:met_baseColor="@color/md_black_1000" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/register_address"
        style="@style/login_text"
        android:hint="@string/register_address"
        app:met_baseColor="@color/md_black_1000" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/runner_primary_button_height"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/register_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/black_button"
            android:text="@string/register_cancel"
            android:textSize="30sp"/>

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/register_btn_confifrm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/black_button"
            android:text="@string/register_confirm"
            android:textSize="30sp"/>
    </LinearLayout>
</LinearLayout>